# input4r2

./: .gitignore
input4r2/: CMakeLists.txt  package.xml
input4r2_command_sender/: CMakeLists.txt  package.xml
input4r2_command_sender/include/input4r2_command_sender/: grsim_sender.hpp  joy2command.hpp
input4r2_command_sender/src/: grsim_sender.cpp  grsim_sender_node.cpp  joy2command.cpp  joy2command_node.cpp
input4r2_gc/: CMakeLists.txt  package.xml
input4r2_gc/include/input4r2_gc/: gc.hpp
input4r2_gc/src/: gc.cpp  gc_node.cpp
input4r2_interface/: CMakeLists.txt  package.xml
input4r2_interface/msg/comm/: Command.msg  RobotCommand.msg
input4r2_interface/msg/gc/referee/: MatchType.msg  Referee.msg  RefereeCommand.msg  RefereeStage.msg  RefereeTeamInfo.msg
input4r2_interface/msg/vision/detection/: Detection.msg  DetectionBall.msg  DetectionRobot.msg
input4r2_interface/msg/vision/geometry/: FieldCircularArc.msg  FieldLineSegment.msg  FieldShapeType.msg  GeometryCameraCalibration.msg  GeometryData.msg  GeometryFieldSize.msg
input4r2_vision/: CMakeLists.txt  package.xml
input4r2_vision/include/input4r2_vision/: vision.hpp
input4r2_vision/proto/: CMakeLists.txt
input4r2_vision/src/: vision.cpp  vision_node.cpp
