<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>input4r2_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ktaro125@gmail.com">take</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>libboost-system-dev</depend>
  <depend>libprotobuf-dev</depend>
  <build_depend>input4r2_interface</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>